# neoboot

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  workspace
cpu/aarch64/: CMakeLists.txt  exception.c  exception.h  neoboot.lds.S  startup.S
cpu/armv7/: toolchain.cmake
cpu/armv8/: CMakeLists.txt  neoboot.lds.S  start.S  startup.S  toolchain.cmake
cpu/armv8a/: vector.S
driver/sunxi_uart/: CMakeLists.txt  uart.c
drivers/sunxi_ddr3/: CMakeLists.txt  ddr3_1333.c  dram_sunxi_dw.c  dram_sunxi_dw.h
include/: regs.h  spl.h  uart.h
libc/: CMakeLists.txt
platform/h3/: CMakeLists.txt  toolchain.cmake
platform/h5/: CMakeLists.txt  toolchain.cmake
platform/sunxi-h3/: CMakeLists.txt
platform/sunxi-h5/: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/cpu/armv8a/: CMakeLists.txt  startup.S
src/driver/sunxi_uart/: uart.c
src/platform/h3/: CMakeLists.txt
src/platform/h5/: CMakeLists.txt
tools/: mksunxiboot.py
